wayot/gke/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: mysql
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 98.210.230.189/32
  - 198.27.103.16/32

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          args:
            - "--ignore-db-dir=kawf"
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-configmap
              mountPath: /etc/mysql/mysql.conf.d/mysqld.cnf
              readOnly: true
              subPath: mysql.conf
          resources:
            requests:
              memory: 4Gi
              cpu: 500m
            limits:
              memory: 6Gi
              cpu: 1
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volumeclaim
        - name: mysql-configmap
          configMap:
            name: mysql
            defaultMode: 420
            items:
              - key: mysql-config
                path: mysql.conf
